@@ -1,7 +1,7 @@
 /* Extended Module Player
  * Copyright (C) 1996-2007 Claudio Matsuoka and Hipolito Carraro Jr
  *
- * $Id: load.h,v 1.12 2007-08-25 10:38:11 cmatsuoka Exp $
+ * $Id: load.h,v 1.13 2007-08-28 18:52:44 cmatsuoka Exp $
  *
  * This file is part of the Extended Module Player and is distributed
  * under the terms of the GNU General Public License. See doc/COPYING
@@ -78,14 +78,5 @@ void	disable_continue_fx	(struct xxm_event *);
 	xxt[i * xxh->chn + j]->rows = xxp[i]->rows; \
     } \
 } while (0)
-
-int8	read8s		(FILE *);
-uint8	read8		(FILE *);
-uint16	read16l		(FILE *);
-uint16	read16b		(FILE *);
-uint32	read24l		(FILE *);
-uint32	read24b		(FILE *);
-uint32	read32l		(FILE *);
-uint32	read32b		(FILE *);
 
 #endif
