@@ -2,8 +2,8 @@
 
 TOPDIR	= ../..
 XCFLAGS	= -I../include
-OBJS	= control.o info.o ipc.o load.o ppdepack.o unsqsh.o crc32.o mmcmp.o \
-	  readrle.o readhuff.o readlzw.o unarc.o
+OBJS	= control.o info.o ipc.o readdata.o load.o ppdepack.o unsqsh.o \
+	  crc32.o mmcmp.o readrle.o readhuff.o readlzw.o unarc.o arcfs.o
 XDEPS	=
 XLIBS	= -L$(TOPDIR)/lib -lxmp
 DFILES	= Makefile $(OBJS:.o=.c)
